apps/infisical/app/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: infisical-route
  namespace: infisical
spec:
  hostnames:
    - "infisical.console.mandacode.com"
  parentRefs:
    - name: eg
      namespace: default
      sectionName: https-console
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: infisical-backend
          namespace: infisical
          port: 8080
